--- a/pytest.ini
+++ b/pytest.ini
@@ -1,45 +1,16 @@
 [pytest]
-# Pytest Configuration for AI Podcast Creator
-
-# Test discovery patterns
-python_files = test_*.py *_test.py
-python_classes = Test*
-python_functions = test_*
-
-# Test paths
-testpaths = tests
-
-# Output options
-addopts = 
-    --verbose
+addopts =
+    -q
     --strict-markers
     --tb=short
-    --maxfail=10
-    -ra
-    --color=yes
-    -W ignore::DeprecationWarning:pydub
-    -W ignore::DeprecationWarning:imageio_ffmpeg
-    -W ignore::DeprecationWarning:pkg_resources
-    -W ignore::PendingDeprecationWarning:gradio
-    -W ignore::RuntimeWarning:pydub
-
-# Markers for organizing tests
 markers =
-    unit: Unit tests for individual components
-    integration: Integration tests for multiple components
-    e2e: End-to-end tests for complete workflows
-    slow: Tests that take significant time (>1s)
-    gpu: Tests that require GPU hardware
-    network: Tests that require internet connection
-    audio: Tests that generate or process audio
-    video: Tests that generate or process video
-    smoke: Quick smoke tests for CI/CD
-    regression: Regression tests for bug fixes
-    property: Property-based tests using Hypothesis
-    mutation: Mutation testing for test quality validation
-    performance: Performance and load tests
-    chaos: Chaos engineering tests for resilience
-    benchmark: Performance benchmark tests
-
-# Coverage settings are now in .coveragerc or pyproject.toml
-
+    gpu: GPU-dependent tests (quarantined by default; set PY_ENABLE_GPU_TESTS=1 to run)
+    unit: Fast unit tests
+    slow: Slow tests
+    e2e: End-to-end tests
+    integration: Integration tests
+    network: Requires internet
+    property: Property-based tests
+    performance: Perf/load tests
+    smoke: Smoke tests for quick validation
+    no_cpu_patch: Tests that should not use CPU patching
