--- a/requirements-mutation.txt
+++ b/requirements-mutation.txt
@@ -24,6 +24,7 @@ tenacity>=8.2.0,<10.0.0
 loguru>=0.7.0,<0.8.0
 tqdm>=4.66.0,<5.0.0
 pyyaml>=6.0.0,<7.0.0
+psutil>=5.9.0,<6.0.0
 pytest==8.4.2
 pytest-asyncio==1.2.0
 pytest-cov==7.0.0
