--- a/.github/workflows/quality-advanced.yml
+++ b/.github/workflows/quality-advanced.yml
@@ -5,6 +5,8 @@ on:
     # Run weekly on Monday at 3am UTC
     - cron: '0 3 * * 1'
   workflow_dispatch:  # Allow manual trigger
+  pull_request:
+    branches: [main, develop]
 
 jobs:
   mutation-testing:
