--- a/.github/workflows/auto-enable-merge.yml
+++ b/.github/workflows/auto-enable-merge.yml
@@ -15,6 +15,9 @@ jobs:
     if: github.event.pull_request.draft == false
     
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v5
+      
       - name: Enable auto-merge
         run: |
           gh pr merge ${{ github.event.pull_request.number }} --auto --squash
